update custom error validation
